--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native-gesture-handler": "^2.13.4",
     "react-native-safe-area-context": "^4.7.3",
     "react-native-screens": "^3.27.0",
+    "react-native-splash-screen": "^3.3.0",
     "react-native-vector-icons": "^10.0.0",
     "react-redux": "^8.1.3",
     "redux": "^4.2.1",
