--- a/package.json
+++ b/package.json
@@ -17,9 +17,13 @@
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-gesture-handler": "^2.13.4",
+    "react-native-pager-view": "^6.2.2",
+    "react-native-reanimated": "^3.5.4",
     "react-native-safe-area-context": "^4.7.3",
     "react-native-screens": "^3.27.0",
     "react-native-splash-screen": "^3.3.0",
+    "react-native-tab-view": "^3.5.2",
+    "react-native-tabs-section-list": "^1.0.1",
     "react-native-vector-icons": "^10.0.0",
     "react-redux": "^8.1.3",
     "redux": "^4.2.1",
