--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.19.3",
@@ -18,6 +19,7 @@
     "@react-navigation/stack": "^6.3.20",
     "@reduxjs/toolkit": "^1.9.7",
     "axios": "^1.6.0",
+    "patch-package": "^8.0.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-gesture-handler": "^2.13.4",
@@ -27,6 +29,7 @@
     "react-native-safe-area-context": "^4.7.3",
     "react-native-screens": "^3.27.0",
     "react-native-splash-screen": "^3.3.0",
+    "react-native-star-view": "^1.1.3",
     "react-native-tab-view": "^3.5.2",
     "react-native-tabs-section-list": "^1.0.1",
     "react-native-vector-icons": "^10.0.0",
